--- a/flask/templates/about.html
+++ b/flask/templates/about.html
@@ -1,11 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hello Flask</title>
-</head>
-<body>
-    <nav></nav>
-</body>
-</html>
+{% extends "base.html" %}
+{% block content %}
+    <h1>About</h1>
+{% endblock %}
