--- a/flask/templates/about.html
+++ b/flask/templates/about.html
@@ -5,7 +5,8 @@
     <p>The formation of the group grew out of a meeting Gandalf had with Thorin in Bree which kindled Thorin's interest in recapturing his long lost family inheritance. Remembering that he had once known an adventurous Hobbit on his travels in The Shire, Gandalf
     decided to add Bilbo to their company because he knew that stealth and cunning were preferable to force. Gandalf also believed that someone like Bilbo could keep the sometimes prideful and stubborn Dwarves from rash action. The superstitious Dwarves
     also considered thirteen to be an unlucky number, and as Gandalf had planned to leave on other business, welcomed a fourteenth to fill in to their party.</p>
-
+    
+    <hr class="featurette-divider">
     <div class="row featurette">
     <div class="col-md-7">
         <h3>Thorin Oakenshield</h3>
@@ -25,6 +26,119 @@
         <h3 class="featurette-heading">Kili &amp; Fili</h3>
         <p class="lead">Fíli and Kíli were the two most active dwarves of Thorin's company, and apart from Balin, and possibly Bombur, they appeared more frequently as "individual" characters in Tolkien's novel than the rest of Thorin's companions, who were most often
             named only in "group" references to the entire company.</p>
+    </div>
+</div>
+<hr class="featurette-divider">
+<div class="row featurette">
+    <div class="col-md-7">
+        <h3>Óin</h3>
+        <p>Óin was the older brother of Glóin, cousin of Dwalin and Balin, and uncle of Gimli. He usually wore a brown-hooded cloak when travelling. Óin fought in the Battle of Azanulbizar along with Thorin Oakenshield, and in TA 2941 joined with Thorin and Company on the quest to reclaim the Lonely Mountain wearing a brown hood.[2] Óin was one of the Dwarves who bet that Bilbo would come along with them to reclaim the Lonely Mountain. Óin and his brother Glóin were usually in charge of preparing the fire for the Company. He fought in and survived the Battle of the Five Armies, and later settled in the Lonely Mountain along with many other dwarves of The Company of Thorin.</p>
+    </div>
+    <div class="col-md-5">
+        <img class="featurette-image img-responsive" src="https://vignette.wikia.nocookie.net/lotr/images/e/e8/Oin.jpg/revision/latest/scale-to-width-down/300?cb=20120908125247" alt="Generic placeholder image">
+    </div>
+</div>
+<hr class="featurette-divider">
+<div class="row featurette">
+    <div class="col-md-5">
+        <img class="featurette-image img-responsive" src="https://vignette.wikia.nocookie.net/lotr/images/f/fc/Gloin_2.jpg/revision/latest/scale-to-width-down/350?cb=20120908171710" alt="Generic placeholder image">
+    </div>
+    <div class="col-md-7">
+        <h3 class="featurette-heading">Glóin</h3>
+        <p class="lead">Glóin son of Gróin was one of the Dwarves of Thorin II Oakenshield's company who set out to reclaim the Lonely Mountain in the Quest of Erebor. He was also the father of Gimli, who became a member of the Fellowship of the Ring.
+            Glóin chiefly appears in The Hobbit as a supporting character. Glóin also appears in The Fellowship of the Ring during the Fellowship's stay in Rivendell.</p>
+    </div>
+</div>
+<hr class="featurette-divider">
+<div class="row featurette">
+    <div class="col-md-7">
+        <h3>Balin</h3>
+        <p>Balin was a Dwarf leader, the son of Fundin, and elder brother of Dwalin. He was one of the thirteen Dwarves who accompanied Thorin II Oakenshield on the quest to regain the Lonely Mountain.
+            A Dwarf Lord known for his wise counsel and willingness to listen, he was one of Thorin's closest friends and advisers. Balin was distantly related to him, and a descendant of the noble house of Durin.
+            He later went to re-establish the kingdom of Moria, but within five years it was overcome once more by Orcs, and he was killed there along with the rest of his companions.</p>
+    </div>
+    <div class="col-md-5">
+        <img class="featurette-image img-responsive" src="https://vignette.wikia.nocookie.net/lotr/images/5/52/Balin.jpg/revision/latest/scale-to-width-down/350?cb=20120911171656" alt="Generic placeholder image">
+    </div>
+</div>
+<hr class="featurette-divider">
+<div class="row featurette">
+    <div class="col-md-5">
+        <img class="featurette-image img-responsive" src="https://vignette.wikia.nocookie.net/lotr/images/1/1c/Dwalin.jpg/revision/latest/scale-to-width-down/350?cb=20120911200601" alt="Generic placeholder image">
+    </div>
+    <div class="col-md-7">
+        <h3 class="featurette-heading">Dwalin</h3>
+        <p class="lead">Dwalin was one of the Dwarves who traveled with Bilbo and Gandalf on the quest to regain the Lonely Mountain from Smaug. He was the brother of Balin and the youngest son of Fundin.</p>
+    </div>
+</div>
+<hr class="featurette-divider">
+<div class="row featurette">
+    <div class="col-md-7">
+        <h3>Ori</h3>
+        <p>Ori was a member of Thorin's Company of Dwarves and participated in the Quest of Erebor, as well as fighting in and surviving the Battle of Five Armies. He, along with his cousins Dori and Nori, were remote kinsmen of Thorin II Oakenshield.</p>
+    </div>
+    <div class="col-md-5">
+        <img class="featurette-image img-responsive" src="https://vignette.wikia.nocookie.net/lotr/images/8/81/Ori.jpeg/revision/latest/scale-to-width-down/350?cb=20130205205637" alt="Generic placeholder image">
+    </div>
+</div>
+<hr class="featurette-divider">
+<div class="row featurette">
+    <div class="col-md-5">
+        <img class="featurette-image img-responsive" src="https://vignette.wikia.nocookie.net/lotr/images/2/27/Mark_Hadlow_as_Dori.jpg/revision/latest/scale-to-width-down/250?cb=20121030113353" alt="Generic placeholder image">
+    </div>
+    <div class="col-md-7">
+        <h3 class="featurette-heading">Dori</h3>
+        <p class="lead">Dori was a Dwarf of Durin's Folk, who, along with his brother Nori and cousin Ori, travelled with Bilbo Baggins and Thorin Oakenshield as a member of Thorin's Company on the Quest for Erebor, to reclaim the Lonely Mountain from the dragon Smaug.</p>
+    </div>
+</div>
+<hr class="featurette-divider">
+<div class="row featurette">
+    <div class="col-md-7">
+        <h3>Nori</h3>
+        <p>Nori was a Dwarf of Durin's Folk. He had a brother named Dori as well as a cousin named Ori, and was a remote kinsman of Thorin Oakenshield. His hood was purple, he played the flute, and he was very fond of regular and plentiful meals like his hobbit friend, Bilbo Baggins.</p>
+    </div>
+    <div class="col-md-5">
+        <img class="featurette-image img-responsive" src="https://vignette.wikia.nocookie.net/pjhobbitfilms/images/7/7b/Nori.png/revision/latest?cb=20170326000058" alt="Generic placeholder image">
+    </div>
+</div>
+<hr class="featurette-divider">
+<div class="row featurette">
+    <div class="col-md-5">
+        <img class="featurette-image img-responsive" src="https://vignette.wikia.nocookie.net/lotr/images/7/73/Bifur_2.jpg/revision/latest/top-crop/width/220/height/220?cb=20120911201025" alt="Generic placeholder image">
+    </div>
+    <div class="col-md-7">
+        <h3 class="featurette-heading">Bifur</h3>
+        <p class="lead">Bifur was a Dwarf of the late-Third Age. He is best known for being a companion to Bilbo Baggins and Thorin Oakenshield on the quest to regain the Lonely Mountain, along with his cousins Bofur and Bombur.</p>
+    </div>
+</div>
+<hr class="featurette-divider">
+<div class="row featurette">
+    <div class="col-md-7">
+        <h3>Bofur</h3>
+        <p>Bofur was a Dwarf of the late-Third Age. He is best known for being companions to Bilbo Baggins, Thorin Oakenshield and Gandalf on the quest to reclaim Lonely Mountain from the dragon Smaug, along with his brother Bombur and cousin Bifur.</p>
+    </div>
+    <div class="col-md-5">
+        <img class="featurette-image img-responsive" src="https://vignette.wikia.nocookie.net/lotr/images/5/56/Bofur_Nesbitt.jpg/revision/latest/scale-to-width-down/199?cb=20121030120400" alt="Generic placeholder image">
+    </div>
+</div>
+<hr class="featurette-divider">
+<div class="row featurette">
+    <div class="col-md-5">
+        <img class="featurette-image img-responsive" src="https://middle-earthencyclopedia.weebly.com/uploads/3/8/2/9/3829140/5362303.jpeg?0" alt="Generic placeholder image">
+    </div>
+    <div class="col-md-7">
+        <h3 class="featurette-heading">Bombur</h3>
+        <p class="lead">Bombur was a Dwarf who accompanied Thorin Oakenshield and Bilbo Baggins on their journey to the Lonely Mountain as part of the company, alongside his brother Bofur and cousin Bifur. Bombur was noted as the fattest Dwarf in the company.</p>
+    </div>
+</div>
+<hr class="featurette-divider">
+<div class="row featurette">
+    <div class="col-md-7">
+        <h3>Gandalf</h3>
+        <p>Gandalf (Norse; IPA: [gand:alf] - "Elf of the Wand" or "Wand-elf") the Grey, later known as Gandalf the White, and originally named Olórin (Quenya; IPA: [oˈloːrin] - "Dreamer" or "Of Dreams"), was an Istar (Wizard), sent to Middle-earth in the Third Age to combat the threat of Sauron. He joined Thorin and his company to reclaim the Lonely Mountain from Smaug, convoked the Fellowship of the Ring to destroy the One Ring, and led the Free Peoples in the final campaign of the War of the Ring.</p>
+    </div>
+    <div class="col-md-5">
+        <img class="featurette-image img-responsive" src="https://vignette.wikia.nocookie.net/lotr/images/e/e7/Gandalf_the_Grey.jpg/revision/latest/scale-to-width-down/350?cb=20121110131754" alt="Generic placeholder image">
     </div>
 </div>
 {% endblock %}
